codama-macros/tests/codama_attribute/error_directive/nothing_provided.fail.stderr
error: expected at least one `code` or `message` attribute
 --> tests/codama_attribute/error_directive/nothing_provided.fail.rs:3:10
  |
3 | #[codama(error())]
  |          ^^^^^^^
