codama-macros/tests/codama_attribute/error_directive/nothing_provided.fail.rs
use codama_macros::codama;

#[codama(error())]
pub struct Test;

fn main() {}
